syntax = "proto3";

option go_package = "./pb";

package pb;
message UserModel{
    int64 id = 1;
    string nickname = 2;
}